# rust-recovery

./: .gitignore  Cargo.toml
.github/: copilot-instructions.md
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  lib.rs
crates/cli/src/commands/: mod.rs  scan.rs
crates/disk_reader/: Cargo.toml
crates/disk_reader/src/: error.rs  hexdump.rs  lib.rs  reader.rs  reader_tests.rs
crates/file_carver/: Cargo.toml
crates/file_carver/src/: carved_file.rs  constants.rs  error.rs  extractor.rs  extractor_tests.rs  lib.rs  matcher.rs  matcher_tests.rs  scanner.rs  scanner_tests.rs  signature.rs  signature_tests.rs  window.rs  window_tests.rs
crates/recovery_engine/: Cargo.toml
crates/recovery_engine/src/: engine.rs  engine_tests.rs  error.rs  lib.rs
src/: main.rs
