[package]
name = "rust-recovery"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
thiserror = "2.0.18"
clap = "4.6.0"
file_carver = { path = "./crates/file_carver" }
recovery_engine = { path = "./crates/recovery_engine" }
cli = { path = "./crates/cli" }

[workspace]
members = [
  "crates/cli",
  "crates/file_carver",
  "crates/recovery_engine",
]
resolver = "2"

[workspace.dependencies]
thiserror = "2.0.18"
anyhow = "1.0.102"
clap = "4.6.0"
